# csp-fork

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.rst  requirements.txt
.github/workflows/: cmake.yml
cmake/: FindClangFormat.cmake  FindCoverage.cmake  FindHtmlCoverage.cmake  FindValgrind.cmake
csp/: CMakeLists.txt  csp.c  test-constraint-accessors.c  test-constraint-to-check.c  test-constraint.c  test-init-finish-1.c  test-init-finish-2.c  test-init-finish-3.c  test-problem-is-consistent.c  test-problem.c
csp/btest/: csp-btest.c  csp-btest.h  load-new-sudoku.c  load-new-sudoku.h  n-queens-benchmark.c  n-queens-benchmark.h  queens-solve.c  queens-solve.h  solve-queens.c  solve-queens.h  solve-sudoku.c  solve-sudoku.h  sudoku-benchmark.c  sudoku-benchmark.h  sudoku-generate.c  sudoku-generate.h  sudoku_generate.c  sudoku_generate.h
csp/btest/cspbtest_plot/: __main__.py  common.py  graph_queens_results.py  graph_sudoku_results.py  queens.py  sudoku.py
csp/btest/python_scripts/: graph_queens_results.py  graph_sudoku_results.py
csp/cmake/: FindValgrind.cmake
csp/src/: CMakeLists.txt  csp.h
csp/src/benchmarking/: CMakeLists.txt  graph_queens_results.py  graph_sudoku_results.py  n_queens_benchmark.c  sudoku_benchmark.c
csp/src/core/: csp-constraint.c  csp-constraint.h  csp-constraint.inc.h  csp-lib.c  csp-lib.h  csp-problem.c  csp-problem.h  csp-problem.inc.h
csp/src/executables/: CMakeLists.txt  load-new-sudoku.c  solve-queens.c  solve-sudoku-v1.c  solve-sudoku-v2.c  solve-sudoku.c
csp/src/solver/: csp-solver-fc.c  csp-solver-fc.h  csp-solver-ovars.c  csp-solver-ovars.h  csp-solver.c  csp-solver.h  sudoku-basic-solve-2.c  sudoku-basic-solve-2.h  sudoku-basic-solve.c  sudoku-basic-solve.h  types-and-structs.c  types-and-structs.h
csp/test/: CMakeLists.txt
csp/test/core/: constraint-accessors.c  constraint.c  init-finish-1.c  init-finish-2.c  init-finish-3.c
csp/test/solver/: constraint-to-check.c  problem-is-consistent.c  problem.c  test-fc.c
csp/testing/: fc-testing.c
docs/: CMakeLists.txt  api.rst  constraint.rst  index.rst  problem.rst  solver.rst
