include_directories(${CMAKE_SOURCE_DIR}/src)

find_package(Valgrind)
message(STATUS "VALGRIND_EXECUTABLE=${VALGRIND_EXECUTABLE}")
if(VALGRIND_EXECUTABLE)
    set(VALGRIND ${VALGRIND_EXECUTABLE})
endif()

file(GLOB CORE_FILES "${CMAKE_SOURCE_DIR}/test/core/*.c")
file(GLOB SOLVER_FILES "${CMAKE_SOURCE_DIR}/test/solver/*.c")
list(APPEND FILES ${CORE_FILES} ${SOLVER_FILES})
message(STATUS "FILES=${FILES}")

foreach(FILENAME ${FILES})
    get_filename_component(SRC ${FILENAME} NAME)
    get_filename_component(TEST ${FILENAME} NAME_WE)
    add_executable(${TEST} ${FILENAME} ${CMAKE_SOURCE_DIR}/src/csp.h)
    add_dependencies(${TEST} csp)
    target_link_libraries(${TEST} csp)
    add_test("${TEST}" ./${TEST})
    if(VALGRIND)
        add_test("${TEST}[valgrind]" ${VALGRIND} --leak-check=full --quiet --error-exitcode=1 ./${TEST}) 
    endif()
endforeach()
